# kashi-vibe-setup

./: .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: contributing.md  index.md  installation.md  usage.md
src/kashi/: __init__.py  main.py
tests/: test_main.py
