[project]
name = "kashi"
version = "0.1.0"
description = "Turn song files into Anki cards for non-native language lyric learning"
readme = "README.md"
authors = [
    {name = "Hans Missenheim", email = "hans@example.com"}
]
license = {text = "MIT"}
keywords = ["anki", "language-learning", "music", "lyrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/hansmissenheim/kashi"
Repository = "https://github.com/hansmissenheim/kashi"
Issues = "https://github.com/hansmissenheim/kashi/issues"

[project.scripts]
kashi = "kashi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kashi"]
