[project]
name = "kashi"
version = "0.1.0"
description = "Turn song files into Anki cards for non-native language lyric learning"
readme = "README.md"
authors = [
    {name = "Hans Missenheim", email = "hans@example.com"}
]
license = {text = "MIT"}
keywords = ["anki", "language-learning", "music", "lyrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/hansmissenheim/kashi"
Repository = "https://github.com/hansmissenheim/kashi"
Issues = "https://github.com/hansmissenheim/kashi/issues"

[project.scripts]
kashi = "kashi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kashi"]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # pylint
]
ignore = [
    "E501",  # line too long, handled by formatter
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
